feat: replace patch_file with robust apply_diff tool Introduces  dependency to support both unified diffs and  search/replace blocks with fuzzy matching.
docs: replace patch_file with apply_diff in system prompt and readme
Updates the "EXECUTION FLOW" in the system prompt and the tool list in the README to reflect the replacement of the  tool with the more robust .

test: update refactor scenario to use apply_diff
Updates the E2E test "Scenario 3: Refactor" to use the new  tool  with a Search/Replace block, replacing the deprecated  usage.

--- a/package.json
+++ b/package.json
@@ -39,12 +39,13 @@
     "tgp": "./bin/tgp.js"
   },
   "dependencies": {
+    "apply-multi-diff": "^0.1.4",
     "esbuild": "^0.19.12",
     "isolated-vm": "^6.0.2",
     "isomorphic-git": "^1.35.1",
+    "typescript": "^5.9.3",
     "zod": "^3.25.76",
-    "zod-to-json-schema": "^3.22.4",
-    "typescript": "^5.9.3"
+    "zod-to-json-schema": "^3.22.4"
   },
   "devDependencies": {
     "tsup": "^8.0.2",
