test: add docker-based npm compatibility test suite Introduces 'test/docker/npm-compat.test.ts' which builds the package, installs it in an 'oven/bun:1' container, and runs the E2E scenarios against the installed dependency. This ensures the published artifact is complete and functional.
test(docker): stream docker pull output to avoid perceived hang
- Updated Container.start to check for image existence and pull with stdio: inherit - Fixed package.json exports ordering (types first)

--- a/.relay/transactions/78.yaml
+++ b/.relay/transactions/78.yaml
@@ -279,6 +279,6 @@ approved: true
 linesAdded: 24
 linesRemoved: 15
 linesDifference: 39
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T14:10:25.784Z'
 status: committed
 id: 78
