--- a/.relay/transactions/79.yaml
+++ b/.relay/transactions/79.yaml
@@ -731,6 +731,6 @@ approved: true
 linesAdded: 5
 linesRemoved: 4
 linesDifference: 9
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T14:10:25.784Z'
 status: committed
 id: 79
