--- a/.relay/transactions/80.yaml
+++ b/.relay/transactions/80.yaml
@@ -429,6 +429,6 @@ approved: true
 linesAdded: 11
 linesRemoved: 4
 linesDifference: 15
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T14:10:25.784Z'
 status: committed
 id: 80
