test: fix docker npm compatibility tests Ensure test workspaces are created within /app/test_workspaces in the container so that node_modules resolution works for 'tool-generation-protocol'.

--- a/.relay/transactions/81.yaml
+++ b/.relay/transactions/81.yaml
@@ -367,6 +367,6 @@ approved: true
 linesAdded: 292
 linesRemoved: 0
 linesDifference: 292
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T14:30:12.513Z'
 status: committed
 id: 81
