--- a/.relay/transactions/82.yaml
+++ b/.relay/transactions/82.yaml
@@ -363,6 +363,6 @@ approved: true
 linesAdded: 20
 linesRemoved: 2
 linesDifference: 22
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T14:30:12.513Z'
 status: committed
 id: 82
