fix: switch esbuild to transformSync in sandbox Replaces the asynchronous  with synchronous  in . This resolves an issue in Docker/CI environments where the long-lived esbuild service daemon would crash or be terminated after high-stress tests (like timeouts), causing subsequent tests to fail with "The service is no longer running".
test: fix docker output assertion to check stderr
Test runners often output summary results to stderr in non-interactive environments. This change checks both streams for the success message.

--- a/.relay/transactions/83.yaml
+++ b/.relay/transactions/83.yaml
@@ -482,6 +482,6 @@ approved: true
 linesAdded: 7
 linesRemoved: 2
 linesDifference: 9
-gitCommittedAt: null
+gitCommittedAt: '2025-11-28T14:34:14.932Z'
 status: committed
 id: 83
