--- a/.relay/transactions/84.yaml
+++ b/.relay/transactions/84.yaml
@@ -192,6 +192,6 @@ approved: true
 linesAdded: 2
 linesRemoved: 2
 linesDifference: 4
-gitCommittedAt: null
+gitCommittedAt: '2025-11-29T08:01:58.593Z'
 status: committed
 id: 84
