--- a/.relay/transactions/85.yaml
+++ b/.relay/transactions/85.yaml
@@ -263,6 +263,6 @@ approved: true
 linesAdded: 2
 linesRemoved: 1
 linesDifference: 3
-gitCommittedAt: null
+gitCommittedAt: '2025-11-29T08:01:58.593Z'
 status: committed
 id: 85
