chore: update author field in package.json
- Set author to arman@noca.pro
- Ensure proper attribution for npm package

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "protocol",
     "backend"
   ],
-  "author": "",
+  "author": "arman@noca.pro",
   "license": "MIT",
   "bin": {
     "tgp": "./bin/tgp.js"
