test: use node:20 and npm install for docker compat tests Switch from oven/bun:1 to node:20 in npm-compat.test.ts to properly support native module installation (isolated-vm) and verify standard NPM behavior. Installs Bun inside the container to run the test suite.
chore(test): upgrade node version to 22 in docker test
Upgrades the Node.js version in the NPM compatibility Docker test from 20 (LTS) to 22 to satisfy the engine requirement of .
While this change makes the test pass, the recommended long-term solution is to support the Node.js LTS version by using a compatible version of  to ensure broader compatibility for users of this library.

test(docker): include integration tests in npm compatibility check
Copies test/integration and test/fixtures into the Docker container and patches imports to verify that the published package works with SQL, Bridge, and Git integrations.

--- a/.relay/transactions/87.yaml
+++ b/.relay/transactions/87.yaml
@@ -293,6 +293,6 @@ approved: true
 linesAdded: 3
 linesRemoved: 0
 linesDifference: 3
-gitCommittedAt: null
+gitCommittedAt: '2025-11-29T08:56:34.708Z'
 status: committed
 id: 87
