--- a/.relay/transactions/89.yaml
+++ b/.relay/transactions/89.yaml
@@ -1,33 +1,36 @@
-uuid: c8f32e9a-7b1d-48d2-94a1-b5d3c8c6f1a9
+uuid: 4f8a2b1c-9d3e-4f5a-8b2c-1d9e0f3a4b5c
 projectId: tool-generation-protocol
-createdAt: '2025-11-29T08:47:26.824Z'
+createdAt: '2025-11-29T09:03:31.259Z'
 gitCommitMsg: >-
-  test: harden docker verification logic with strict output parsing
+  test: use node:20 and npm install for docker compat tests
 
-  Replaces loose string matching with regex-based parsing of 'bun test' stats to
-  ensure zero failures occurred inside the container.
+  Switch from oven/bun:1 to node:20 in npm-compat.test.ts to properly support
+  native module installation (isolated-vm) and verify standard NPM behavior.
+  Installs Bun inside the container to run the test suite.
 promptSummary: >-
-  I updated the Docker E2E test to strictly parse the test runner output for
-  "pass" and "fail" counts, ensuring 0 failures and >0 passes, and to log the
-  full output on failure.
+  Fix Docker NPM compatibility test by switching to `node:20` image and using
+  `npm install` instead of `bun add` to support `isolated-vm` installation.
 reasoning:
   - >-
-    To ensure the Docker compatibility tests are strictly verifying success (and
-    not just exiting with code 0 or matching a loose string), I will implement
-    strict parsing of the test runner's output. This will fail the test if the
-    container reports any failures, or if it fails to report any passes (e.g.,
-    if the test runner crashed silently).
-  - '### 1. Harden Docker Verification Logic'
-  - 'I will update `test/docker/npm-compat.test.ts` to:'
-  - 1.  Capture the combined `stdout` and `stderr` from the container.
-  - 2.  Strip ANSI color codes to ensure clean regex matching.
+    To fix the issue where `isolated-vm` (a native V8 module) fails to install
+    inside the `oven/bun:1` Docker container due to missing build tools and
+    runtime incompatibilities, I will modify the `npm-compat.test.ts` test.
+  - '**Reasoning:**'
   - >-
-    3.  Parse the `X pass` and `Y fail` statistics typically output by `bun
-    test`.
-  - 4.  Assert that `failCount` is strictly 0 and `passCount` is greater than 0.
+    1.  **Switch Base Image**: Change the container image from `oven/bun:1` to
+    `node:20`. This ensures we are testing true NPM compatibility in a standard
+    Node.js environment, where `isolated-vm` prebuilds usually work or can be
+    built from source.
   - >-
-    5.  Log the full container output if any of these checks fail, aiding in
-    debugging.
+    2.  **Install Dependencies**: Add installation of `curl`, `unzip`,
+    `python3`, `make`, and `g++`. This allows installing Bun (needed to run the
+    tests themselves) and building native modules if prebuilds fail.
+  - >-
+    3.  **Install Bun**: Install Bun inside the Node container so we can execute
+    the test suite (which uses `bun:test`).
+  - >-
+    4.  **Use NPM**: Replace `bun init/add` with `npm init/install` to verify
+    the package installs correctly using the standard Node package manager.
 operations:
   - type: write
     path: test/docker/npm-compat.test.ts
@@ -36,85 +39,63 @@ operations:
 
       +++ test/docker/npm-compat.test.ts
 
-      @@ -107,11 +107,26 @@
-           console.log('[Docker] Running Tests...');
-           const res = await container.exec(['bun', 'test', 'test/e2e/scenarios.test.ts'], { cwd: '/app' });
-           
-      -    if (res.exitCode !== 0) {
+      @@ -118,3 +118,4 @@
+         beforeEach(async () => {
+           // 2. Start a fresh container
+      -    container = new Container('oven/bun:1');
 
-      -        console.error('STDOUT:', res.stdout);
+      +    // Use Node to verify true NPM compatibility and allow native modules
+      (isolated-vm) to build/install correctly
 
-      -        console.error('STDERR:', res.stderr);
+      +    container = new Container('node:20');
+           await container.start();
+           console.log(`[Docker] Container started: ${container.id}`);
+      @@ -142,5 +143,11 @@
+       
+           // 3. Prepare Environment inside Container
+      -    console.log('[Docker] Installing dependencies (git)...');
 
-      +    const output = res.stdout + res.stderr;
+      +    console.log('[Docker] Installing dependencies...');
+           await exec(['apt-get', 'update']);
+      -    await exec(['apt-get', 'install', '-y', 'git']);
+
+      +    // Install git (for tests), curl/unzip (for bun), and build tools
+      (for native modules like isolated-vm)
+
+      +    await exec(['apt-get', 'install', '-y', 'git', 'curl', 'unzip',
+      'python3', 'make', 'g++']);
 
       +    
 
-      +    // Strict Verification: Parse the output for test counts
+      +    // Install Bun (needed for test runner)
 
-      +    // We strip ANSI codes just in case bun outputs colors
+      +    await exec(['bash', '-c', 'curl -fsSL https://bun.sh/install |
+      bash']);
 
-      +    // eslint-disable-next-line no-control-regex
+      +    // Symlink bun/bunx to global path
 
-      +    const cleanOutput = output.replace(/\u001b\[.*?m/g, ''); 
+      +    await exec(['ln', '-s', '/root/.bun/bin/bun', '/usr/local/bin/bun']);
 
-      +
+      +    await exec(['ln', '-s', '/root/.bun/bin/bun',
+      '/usr/local/bin/bunx']);
+           
+           // Configure Git (required for TGP tests)
+      @@ -158,7 +165,7 @@
+           // Initialize Project & Install Package
+           console.log('[Docker] Installing package...');
+      -    await exec(['bun', 'init', '-y'], { cwd: '/app' });
 
-      +    const passMatch = cleanOutput.match(/(\d+)\s+pass/);
+      -    await exec(['bun', 'add', './tgp.tgz'], { cwd: '/app' });
 
-      +    const failMatch = cleanOutput.match(/(\d+)\s+fail/);
+      +    await exec(['npm', 'init', '-y'], { cwd: '/app' });
 
-      +
+      +    await exec(['npm', 'install', './tgp.tgz'], { cwd: '/app' });
+           // Install dev dependencies needed for the tests themselves
+      -    await exec(['bun', 'add', '-d', 'bun-types'], { cwd: '/app' });
 
-      +    if (!passMatch || !failMatch) {
-
-      +        console.error('--------------- CONTAINER OUTPUT
-      ---------------');
-
-      +        console.error(output);
-
-      +       
-      console.error('------------------------------------------------');
-
-      +        throw new Error('Could not parse test runner output. The test
-      runner might have crashed or output format changed.');
-           }
+      +    await exec(['npm', 'install', '-D', 'bun-types'], { cwd: '/app' });
        
-      +    const passCount = parseInt(passMatch[1], 10);
-
-      +    const failCount = parseInt(failMatch[1], 10);
-
-      +
-
-      +    if (res.exitCode !== 0 || failCount > 0 || passCount === 0) {
-
-      +        console.error('--------------- TEST FAILURE ---------------');
-
-      +        console.error(`Exit Code: ${res.exitCode}`);
-
-      +        console.error(`Pass: ${passCount}, Fail: ${failCount}`);
-
-      +        console.error('--------------- CONTAINER OUTPUT
-      ---------------');
-
-      +        console.error(output);
-
-      +       
-      console.error('------------------------------------------------');
-
-      +    }
-
-      +
-           expect(res.exitCode).toBe(0);
-      -    const output = res.stdout + res.stderr;
-
-      -    expect(output.toLowerCase()).toContain('pass');
-
-      +    expect(failCount).toBe(0);
-
-      +    expect(passCount).toBeGreaterThan(0);
-         }, TIMEOUT);
-       });
+           // DEBUG: Verify installation state
     patchStrategy: standard-diff
 snapshot:
   test/docker/npm-compat.test.ts: >-
@@ -289,32 +270,47 @@ snapshot:
       });
 
       it('installs and runs E2E scenarios correctly', async () => {
+        // Helper for verbose execution to debug installation issues
+        const exec = async (cmd: string[], opts: { cwd?: string } = {}) => {
+            console.log(`[Docker] Executing: ${cmd.join(' ')}`);
+            const res = await container.exec(cmd, opts);
+            if (res.stdout) console.log(res.stdout);
+            if (res.stderr) console.error(res.stderr);
+            if (res.exitCode !== 0) throw new Error(`Command failed with code ${res.exitCode}: ${cmd.join(' ')}`);
+            return res;
+        };
+
         // 3. Prepare Environment inside Container
         console.log('[Docker] Installing dependencies (git)...');
-        await container.exec(['apt-get', 'update']);
-        await container.exec(['apt-get', 'install', '-y', 'git']);
+        await exec(['apt-get', 'update']);
+        await exec(['apt-get', 'install', '-y', 'git']);
         
         // Configure Git (required for TGP tests)
-        await container.exec(['git', 'config', '--global', 'user.email', 'test@example.com']);
-        await container.exec(['git', 'config', '--global', 'user.name', 'Test User']);
+        await exec(['git', 'config', '--global', 'user.email', 'test@example.com']);
+        await exec(['git', 'config', '--global', 'user.name', 'Test User']);
 
         // 4. Setup Test Project
-        await container.exec(['mkdir', '-p', '/app']);
+        await exec(['mkdir', '-p', '/app']);
         
         // Copy tarball
         console.log('[Docker] Copying artifacts...');
         await container.cp(tarballPath, '/app/tgp.tgz');
         
         // Copy tests (We only copy e2e as those are the consumer-facing tests)
-        await container.exec(['mkdir', '-p', '/app/test']);
+        await exec(['mkdir', '-p', '/app/test']);
         await container.cp(path.join(projectRoot, 'test/e2e'), '/app/test/e2e');
 
         // Initialize Project & Install Package
         console.log('[Docker] Installing package...');
-        await container.exec(['bun', 'init', '-y'], { cwd: '/app' });
-        await container.exec(['bun', 'add', './tgp.tgz'], { cwd: '/app' });
+        await exec(['bun', 'init', '-y'], { cwd: '/app' });
+        await exec(['bun', 'add', './tgp.tgz'], { cwd: '/app' });
         // Install dev dependencies needed for the tests themselves
-        await container.exec(['bun', 'add', '-d', 'bun-types'], { cwd: '/app' });
+        await exec(['bun', 'add', '-d', 'bun-types'], { cwd: '/app' });
+
+        // DEBUG: Verify installation state
+        console.log('[Docker] Verifying installation...');
+        await exec(['cat', 'package.json'], { cwd: '/app' });
+        await exec(['ls', '-F', 'node_modules'], { cwd: '/app' });
 
         // 5. Patch Test Files
         console.log('[Docker] Patching tests to use installed package...');
@@ -327,26 +323,53 @@ snapshot:
         // Patch scenarios.test.ts to import from 'tool-generation-protocol' instead of relative paths
         // Regex matches ../../src/... paths
         const sedCmd = `sed -i "s|\\.\\./\\.\\./src/[a-zA-Z0-9/._-]*|tool-generation-protocol|g" /app/test/e2e/scenarios.test.ts`;
-        await container.exec(['bash', '-c', sedCmd]);
+        await exec(['bash', '-c', sedCmd]);
 
         // 6. Run Tests
         console.log('[Docker] Running Tests...');
         const res = await container.exec(['bun', 'test', 'test/e2e/scenarios.test.ts'], { cwd: '/app' });
         
-        if (res.exitCode !== 0) {
-            console.error('STDOUT:', res.stdout);
-            console.error('STDERR:', res.stderr);
+        const output = res.stdout + res.stderr;
+        
+        // Strict Verification: Parse the output for test counts
+        // We strip ANSI codes just in case bun outputs colors
+        // eslint-disable-next-line no-control-regex
+        const cleanOutput = output.replace(/\u001b\[.*?m/g, ''); 
+
+        const passMatch = cleanOutput.match(/(\d+)\s+pass/);
+        const failMatch = cleanOutput.match(/(\d+)\s+fail/);
+
+        if (!passMatch || !failMatch) {
+            console.error('--------------- CONTAINER OUTPUT ---------------');
+            console.error(output);
+            console.error('------------------------------------------------');
+            throw new Error('Could not parse test runner output. The test runner might have crashed or output format changed.');
+        }
+
+        const passCount = parseInt(passMatch[1], 10);
+        const failCount = parseInt(failMatch[1], 10);
+
+        // EXPLICIT LOGGING: Prove to the user that tests actually ran inside
+        console.log(`[Docker] Inner Test Verification: ${passCount} passed, ${failCount} failed.`);
+
+        if (res.exitCode !== 0 || failCount > 0 || passCount === 0) {
+            console.error('--------------- TEST FAILURE ---------------');
+            console.error(`Exit Code: ${res.exitCode}`);
+            console.error(`Pass: ${passCount}, Fail: ${failCount}`);
+            console.error('--------------- CONTAINER OUTPUT ---------------');
+            console.error(output);
+            console.error('------------------------------------------------');
         }
 
         expect(res.exitCode).toBe(0);
-        const output = res.stdout + res.stderr;
-        expect(output.toLowerCase()).toContain('pass');
+        expect(failCount).toBe(0);
+        expect(passCount).toBeGreaterThan(0);
       }, TIMEOUT);
     });
 approved: true
-linesAdded: 29
-linesRemoved: 5
-linesDifference: 34
-gitCommittedAt: '2025-11-29T08:56:34.708Z'
+linesAdded: 14
+linesRemoved: 6
+linesDifference: 20
+gitCommittedAt: null
 status: committed
-id: 86
+id: 89
